Melhoria: retorno do venda Id, Update dos testes relacionados e Fix dos equals